# pdfcompare

./: .gitignore  package-lock.json  package.json
.svelte-kit/: ambient.d.ts
docs/: code-signing.md
pdfdiff/: __init__.py  __main__.py  analyzer.py  annotator.py  build.sh  cli.py  detector.py  differ.py  extractor.py  models.py  pdfdiff.spec  pyproject.toml  visual_differ.py
scripts/: build-macos.sh  setup-windows.ps1
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pdf.rs  sidecar.rs
src/lib/components/: AnnotationTab.svelte  AnnotationToolbar.svelte  DiffSidebar.svelte  NotePopover.svelte  PdfPanel.svelte  PdfThumbnailSidebar.svelte  PdfToolbar.svelte  TextDiffTab.svelte  TypoDiffTab.svelte
src/lib/services/: app-menu.ts  pdfjs-setup.ts
src/lib/stores/: annotationStore.svelte.ts  diffStore.svelte.ts  validationStore.svelte.ts
src/lib/types/: annotations.ts  diff.ts  validation.ts
src/routes/: +page.svelte
src/styles/: macos-theme.css
